# md-chat

./: .env.example  .gitignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sbom.yml  security.yml
ai-layer/: .env.example  Dockerfile  LICENSE  README.md  alembic.ini  gunicorn.conf.py  openapi.yaml  pyproject.toml
ai-layer/migrations/: README.md  env.py
ai-layer/migrations/versions/: 0001_initial.py
ai-layer/scripts/: benchmark.py  generate-audit-key.py  gunicorn-run.sh  serve-swagger-ui.py  smoke.sh
ai-layer/src/md_chat_ai/: __init__.py  config.py  wsgi.py
ai-layer/src/md_chat_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-layer/src/md_chat_ai/agents/: __init__.py  digital_twin.py  memory.py  message_optimizer.py  profile_generator.py
ai-layer/src/md_chat_ai/api/: __init__.py  auth.py  eevidence.py  health.py  identity.py  twin.py
ai-layer/src/md_chat_ai/auth/: __init__.py  phone_verification.py  pin_backup.py  totp_mfa.py
ai-layer/src/md_chat_ai/db/: __init__.py  base.py  engine.py  models.py
ai-layer/src/md_chat_ai/eevidence/: __init__.py  audit.py  keys.py  portal.py  signing.py  triage.py
ai-layer/src/md_chat_ai/graph/: __init__.py  builder.py  entity_reader.py  neo4j_backend.py  ontology.py
ai-layer/src/md_chat_ai/i18n/: __init__.py  catalog.py
ai-layer/src/md_chat_ai/i18n/translations/: en.json  ro.json  ru.json  uk.json
ai-layer/src/md_chat_ai/identity/: __init__.py  mpass_saml.py  msign_client.py  oidc_bridge.py
ai-layer/src/md_chat_ai/llm/: __init__.py  client.py  router_adapter.py
ai-layer/src/md_chat_ai/memory/: __init__.py
ai-layer/src/md_chat_ai/reports/: __init__.py  agent.py  briefing.py  templates.py
ai-layer/src/md_chat_ai/security/: __init__.py  ai_safety.py  error_handler.py  gdpr.py  prompt_guard.py  rate_limiter.py  web_hardening.py
ai-layer/tests/: README.md  conftest.py  test_ai_safety.py  test_ai_safety_branches.py  test_auth.py  test_db_models.py  test_digital_twin.py  test_eevidence.py  test_eevidence_portal_branches.py  test_eevidence_signing.py  test_graph.py  test_gunicorn_config.py  test_health.py  test_i18n.py  test_identity.py  test_llm_client.py  test_llm_sync_shim.py  test_memory_branches.py  test_message_optimizer.py  test_message_optimizer_branches.py  test_oidc_bridge_branches.py  test_openapi_spec.py  test_pin_backup_branches.py  test_reports.py  test_security.py  test_twin_api.py  test_web_hardening.py  test_wsgi.py
ai-layer/tests/integration/: __init__.py  test_compliance_disclosure.py  test_metrics.py  test_smoke_full_stack.py
brand/: README.md  colors.css  og-image-spec.md  press-release-EN.md  press-release-RO.md  press-release-RU.md  social-card-spec.md  typography.css  voice-tone.md
brand/pitch/: MD-Chat-Moldova-Digital-Summit.md  MD-Chat-One-Pager.md  README.md  generate-pdf.sh  generate-pptx.py  requirements.txt  speaker-notes.md
client-android/: .gitignore  CHANGELOG.md  LICENSE  README.md  flavors.md  proguard-rules-mdchat.pro
client-android/overlays/: branding.yaml
client-android/scripts/: apply-branding.sh  fork-bootstrap.sh  sync-upstream.sh
client-ios/: .gitignore  CHANGELOG.md  LICENSE  README.md
client-ios/overlays/: branding.yaml
client-ios/scripts/: apply-branding.sh  fork-bootstrap.sh  sync-upstream.sh
docs/: api-reference.md  architecture.md  breach-response.md  compliance.md  deploy.md  dpia.md  dsr-process.md  eevidence-key-rotation.md  eevidence-runbook.md  element-x-android-fork-plan.md  element-x-ios-fork-plan.md  issues-to-create.md  legal-index.md  load-test-runbook.md  mpass-integration.md  performance.md  privacy-notice.md  production-deploy.md  release-process.md  roadmap.md  ropa.md  sub-processors.md  synapse-rebrand-plan.md  terms-of-service.md  testing.md
docs/browser-agent/: CODEX-PROMPT.md  PLAYBOOK.md  README.md  run.py
infra/docker/: .env.example  docker-compose.yml
infra/landing/: README.md  blog-post-launch-EN.md  blog-post-launch-RO.md  email-b2b-warm-RO.md  index.html  letter-AGE-WeBuild.md  letter-MSACredit-LoI.md  letter-MoldovaITPark.md  letter-UTM.md  linkedin-launch.md  mastodon-thread.md  press-inquiry-response.md  privacy.html  robots.txt  security.html  show-hn.md  sitemap.xml  terms.html
infra/scripts/: deploy.sh  (+2 more)
server/: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md
(+35 files in other folders)
