[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-chat-ai"
version = "0.1.0"
description = "AI organizing layer for MD-Chat sovereign messenger (Cronberry-derived)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mega Promoting SRL", email = "contact@md-chat.eu" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0",
    "pydantic>=2.5",
    "neo4j>=5.20",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.40",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://md-chat.eu"
Repository = "https://github.com/olegchetrean/md-chat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
