[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "md-chat-ai"
version = "0.1.0"
description = "AI organizing layer for MD-Chat sovereign messenger (Cronberry-derived)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Mega Promoting SRL", email = "contact@md-chat.eu" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "flask>=3.0",
    "pydantic>=2.5",
    "neo4j>=5.20",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.40",
    "redis>=5.0",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "pyotp>=2.9",
    "argon2-cffi>=23.1",
    "qrcode>=8.0",
    "cryptography>=43.0",
]

[project.optional-dependencies]
# Government identity stack — MPass SAML SP, MSign SOAP, OIDC bridge.
# Kept optional because python3-saml requires libxmlsec1 (native dep) and
# many dev hosts (macOS, minimal CI runners) cannot install it cleanly.
identity = [
    "python3-saml>=1.16",
    "zeep>=4.2",
    "pyjwt[crypto]>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pyjwt[crypto]>=2.9",
    "bandit[toml]>=1.7",
    "safety>=3.2",
    "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://md-chat.eu"
Repository = "https://github.com/olegchetrean/md-chat"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501: black handles line wrapping; ignore for LLM prompt strings (multi-line f-strings).
# UP042: `class X(str, Enum)` is fine — StrEnum migration is a separate cleanup.
ignore = ["E501", "UP042"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
markers = [
    "integration: integration test (boots Flask app)",
    "compliance: compliance / regulatory check (AI Act, GDPR, MD Law 195/2024)",
    "security: security control verification",
]

[tool.coverage.run]
source = ["md_chat_ai"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "build"]
skips = ["B101"]  # assert_used — fine in tests; bandit excludes tests anyway
